<resources>
    <string name="app_name">UniversalStore</string>
    <string name="comenzar">GET STARTED</string>
    <string name="bienvenido">BIENVENIDOS A UNIVERSAL STORE</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="btnlogin">LOGIN</string>
    <string name="problema">¿Problemas para Ingresar?</string>
    <string name="registro">REGISTER</string>
    <string name="registrotienda">REGISTER SHOP</string>
    <string name="nombre">Ingrese Nombre Completo</string>
    <string name="emailregis">Email</string>
    <string name="pais">Pais</string>
    <string name="ciudad">Ciudad</string>
    <string name="passregis">Password</string>
    <string name="rol">Rol</string>
    <string name="tienda">Nombre de la Tienda</string>
    <string name="btnregis">Create Register</string>
    <string name="btnatras">Atrás</string>
    <string name="btneditar">Editar</string>
    <string name="btndelete">Eliminar</string>
    <string name="btnactualizar">Actualizar</string>
    <string name="product_name">Nombre Producto</string>
    <string name="descrip_pro">Descripcion Producto</string>
    <string name="stock_pro">Unidades Disponibles</string>
    <string name="price_pro">Precio</string>
    <string name="category_pro">Categoria</string>
    <string name="title_update">Actualizar Productos</string>
    <string name="addprod">Agregar Productos</string>
    <string name="btnagre">Agregar</string>
    <string name="btnselectimage">Select Image</string>
    <string name="user_preference_key">user_preference_key</string>
</resources>