<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    tools:context=".AddProduct">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="409dp"
        android:layout_height="85dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/addprod"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:textColor="@color/micolor"
        android:textColorHint="@color/micolor"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:hint="@string/descrip_pro"
        android:inputType="textPersonName"
        android:textColor="@color/micolor"
        android:textColorHint="@color/micolor"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etStock"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:hint="@string/stock_pro"
        android:inputType="textPersonName"
        android:textColor="@color/micolor"
        android:textColorHint="@color/micolor"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:hint="@string/price_pro"
        android:inputType="textPersonName"
        android:textColor="@color/micolor"
        android:textColorHint="@color/micolor"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStock" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#A8FFFFFF"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:hint="@string/category_pro"
        android:inputType="textPersonName"
        android:textColor="@color/micolor"
        android:textColorHint="@color/micolor"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/boton"
        android:fontFamily="@font/aclonica"
        android:text="@string/btnagre"
        android:textColor="#BEFFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategory" />
</androidx.constraintlayout.widget.ConstraintLayout>